<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/landingpage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/grad"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_alc_4_0"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:id="@+id/btnAbout"
        android:layout_marginTop="50dp"
        android:background="@drawable/bgbutton"
        android:enabled="true"
        android:text="@string/about_alc" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnProfile"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:background="@drawable/bgbutton"
        android:text="@string/my_profiles" />


</LinearLayout>